--- a/src/Pages/Login/Login.module.scss
+++ b/src/Pages/Login/Login.module.scss
@@ -13,7 +13,7 @@
 .loginContainer{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
     padding: 2rem;
@@ -21,5 +21,12 @@
     border-radius: 10px;
     color: white;
     max-width: 500px;
+    width: 100%;
+    transition: all 0.3s ease-in-out;
+    height: 400px;
+}
+
+.nav{
+    // margin-bottom: 1rem;
     width: 100%;
 }
