--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,23 @@
-@import url('normalize.css');
+@import url("normalize.css");
 
 * {
-    font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+.alert {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 400px;
+  max-width: 100%;
+  padding: 1rem;
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 9999;
+  color: #222;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  h1 {
+    font-size: 1.5rem;
+    margin-block: 0.5rem;
+  }
 }
