--- a/src/Pages/Login/Login.module.scss
+++ b/src/Pages/Login/Login.module.scss
@@ -4,11 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("/assets/mountain.jpeg");
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+  background-color: #222;
 }
 
 .loginContainer{
